methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for(compteur <- 1 to 7){
               ^